Revert "squash tooltip bugs and allow styling the target"
This reverts commit a7c8d5b315423d0c743b8a2821f7fc5014453d8d.

--- a/src/Tooltip/Tooltip.scss
+++ b/src/Tooltip/Tooltip.scss
@@ -13,7 +13,6 @@ $shadow: 0 0 11px 0 $shadow-color;
 }
 
 .tooltip {
-  visibility: hidden;
 }
 
 .tooltipInner {
